changed a label form "Typing errors, double spaces and tags issues" to "Tag issues (mismatches, whitespaces)"

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -802,6 +802,11 @@ color:#333;}
 
 }
 */
+
+span.notify {
+display: block;
+}
+
 td.addtmxtd {
 width: 804px;
 }
@@ -815,7 +820,7 @@ width: 804px;
 }
 
 .downloading .uploadloader {
-	right: 126px;
+right: 130px;
 margin-top: -2px;
 background-size: 15px;
 background-color: #D6D6D6;
@@ -4152,8 +4157,8 @@ z-index: 10000;
     list-style: none;
     height: 95%;
     outline: none;
-    word-wrap: break-word;
-    word-break: break-all;
+    /*word-wrap: break-word;*/
+    /*word-break: break-all;*/
 }
 .text a{text-decoration:none;color:#000 }
 
@@ -4233,6 +4238,7 @@ body.archived section .status-container
 	border:1px solid #727272;
 	box-shadow: inset 0 1px 2px #ccc;
 	-webkit-box-shadow: inset 0 1px 2px #ccc;
+    word-break: normal;
 /*	-moz-transition:background-color 2s;
 	-webkit-transition:background-color 2s !important;
 	-o-transition:background-color 2s;
@@ -4321,7 +4327,7 @@ textarea, input, .editarea, .search-editarea, select  {
 .translation
 {
     word-wrap: break-word;
-    word-break: break-all;
+    /*word-break: break-all;*/
 }
 .graysmall .translation
 {
